Big Update
Signed-off-by: Sertyo`s MacBook air <sertyostream@gmail.com>