@@ -1,87 +1,88 @@
-package sertyo.events.ui.csgui.component.impl;
+package sertyo.events.ui.csgui.component.impl;//
+// Source code recreated from a .class file by IntelliJ IDEA
+// (powered by FernFlower decompiler)
+//
 
-import sertyo.events.Main;
-import sertyo.events.manager.theme.Themes;
+
+import com.google.common.collect.Lists;
 import sertyo.events.module.setting.impl.ModeSetting;
 import sertyo.events.ui.csgui.component.Component;
-import sertyo.events.utility.render.RenderUtil;
+import sertyo.events.ui.csgui.component.impl.ModuleComponent;
 import sertyo.events.utility.font.Fonts;
+import sertyo.events.utility.render.RenderUtility;
 
 import java.awt.Color;
 import java.util.Comparator;
 import java.util.Iterator;
-import java.util.List;
-import java.util.stream.Collectors;
 
 public class ModeComponent extends Component {
    public ModuleComponent moduleComponent;
    public ModeSetting setting;
+   private boolean extended;
 
    public ModeComponent(ModuleComponent moduleComponent, ModeSetting setting) {
-      super(0.0F, 0.0F, 0.0F, 18.0F);
+      super(0.0F, 0.0F, 0.0F, 15.0F);
       this.moduleComponent = moduleComponent;
       this.setting = setting;
    }
 
    public void render(int mouseX, int mouseY) {
       super.render(mouseX, mouseY);
-      int color = Main.getInstance().getThemeManager().getCurrentStyleTheme().getColors()[0].getRGB();
-      int color2 = Main.getInstance().getThemeManager().getCurrentStyleTheme().getColors()[1].getRGB();
-      boolean isDark = Main.getInstance().getThemeManager().getCurrentGuiTheme().equals(Themes.DARK.getTheme());
-      Fonts.msBold[14].drawString(this.setting.getName(), this.x + 5.0F, this.y + 4.0F, isDark ? Color.WHITE.getRGB() : (new Color(55, 55, 55)).getRGB());
-      float availableWidth = this.width - 10.0F;
-      float xOffset = 2.0F;
-      float yOffset = 4.0F;
-      float spacing = 3.0F;
+      int color = Color.decode("#1E1F30").getRGB();
+      Fonts.msBold[14].drawString(this.setting.getName(), this.x + 5.0F, this.y + 5.5F, (new Color(149, 149, 161)).getRGB());
+      float normalHeight = 0.0F;
+      if (this.extended) {
+         normalHeight = 12.5F;
 
-      float enabledWidth;
-      for(Iterator var10 = ((List)this.setting.getModes().stream().sorted(Comparator.comparingDouble(this::getEnabledWidth)).collect(Collectors.toList())).iterator(); var10.hasNext(); xOffset += enabledWidth + spacing) {
-         String mode = (String)var10.next();
-         enabledWidth = this.getEnabledWidth(mode);
-         float enabledHeight = (float)(Fonts.msBold[14].getFontHeight());
-         if (xOffset + enabledWidth > availableWidth) {
-            xOffset = 2.0F;
-            yOffset += enabledHeight + spacing;
+         for(Iterator var5 = this.setting.getModes().stream().sorted(Comparator.comparingDouble(this::getEnabledWidth)).toList().iterator(); var5.hasNext(); normalHeight += 9.0F) {
+            String mode = (String)var5.next();
          }
-
-         if (this.setting.get().equals(mode)) {
-            RenderUtil.Render2D.drawRoundedGradientRect(this.x + 3.0F + xOffset, this.y + (float)Fonts.msBold[14].getFontHeight() + yOffset, enabledWidth, enabledHeight, 3.0F, 1, color, color, color2, color2);
-         } else {
-            RenderUtil.Render2D.drawRoundedRect(this.x + 3.0F + xOffset, this.y + (float)Fonts.msBold[14].getFontHeight() + yOffset, enabledWidth, enabledHeight, 3.0F, isDark ? (new Color(52, 52, 52)).getRGB() : (new Color(160, 160, 160)).getRGB());
-         }
-
-         Fonts.msBold[14].drawString(mode, this.x + 5.0F + xOffset, this.y + 3.0F + (float)Fonts.msBold[14].getFontHeight() + yOffset, isDark ? Color.WHITE.getRGB() : (new Color(55, 55, 55)).getRGB());
+      } else {
+         normalHeight = 11.0F;
       }
 
-      this.height = 18.0F + yOffset;
+      this.setHeight(normalHeight + 4.0F);
+      int maxLength = this.setting.getModes().stream().mapToInt(this::getEnabledWidth).max().orElse(0);
+      RenderUtility.drawRoundedRect(this.x + this.width - 20.0F - (float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4), this.y + 1.5F, (float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4) + 12.5F, normalHeight, 4.0F, Color.decode("#2B2C44").getRGB());
+      Fonts.msBold[14].drawString(this.setting.get(), this.x + this.width - 17.0F - (float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4), this.y + 5.5F, (new Color(149, 149, 161)).getRGB());
+      Fonts.icons[16].drawString("t", this.x + this.width - 17.0F, this.y + 6.5F, (new Color(149, 149, 161)).getRGB());
+      if (this.extended) {
+         int offset = 0;
+
+         for(Iterator var7 = Lists.reverse(this.setting.getModes().stream().sorted(Comparator.comparingDouble(this::getEnabledWidth)).toList()).iterator(); var7.hasNext(); offset += 9) {
+            String mode = (String)var7.next();
+            if (this.setting.is(mode)) {
+               RenderUtility.drawRoundedRect(this.x + this.width - 18.0F - (float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4), this.y + 12.0F + (float)offset, (float)(Fonts.msBold[14].getWidth(mode) + 4), 9.0F, 4.0F, color);
+            }
+
+            Fonts.msBold[14].drawString(mode, this.x + this.width - 16.0F - (float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4), this.y + 15.0F + (float)offset, this.setting.is(mode) ? -1 : (new Color(149, 149, 161)).getRGB());
+         }
+      }
+
    }
 
    public void mouseClicked(double mouseX, double mouseY, int mouseButton) {
-      super.mouseClicked(mouseX, mouseY, mouseButton);
-      float availableWidth = this.width - 10.0F;
-      float xOffset = 2.0F;
-      float yOffset = 4.0F;
-      float spacing = 3.0F;
+      int maxLength = this.setting.getModes().stream().mapToInt(this::getEnabledWidth).max().orElse(0);
+      if (mouseButton == 1 && RenderUtility.isHovered(mouseX, mouseY, (double)(this.x + this.width - 19.0F - (float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4)), (double)(this.y + 1.5F), (double)((float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4) + 11.5F), 11.0)) {
+         this.extended = !this.extended;
+      }
 
-      float enabledWidth;
-      for(Iterator var10 = ((List)this.setting.getModes().stream().sorted(Comparator.comparingDouble(this::getEnabledWidth)).collect(Collectors.toList())).iterator(); var10.hasNext(); xOffset += enabledWidth + spacing) {
-         String mode = (String)var10.next();
-         enabledWidth = this.getEnabledWidth(mode);
-         float enabledHeight = (float)(Fonts.msBold[14].getFontHeight());
-         if (xOffset + enabledWidth > availableWidth) {
-            xOffset = 2.0F;
-            yOffset += enabledHeight + spacing;
-         }
+      if (this.extended) {
+         int offset = 0;
 
-         if (RenderUtil.isHovered(mouseX, mouseY, (double)(this.x + 3.0F + xOffset), (double)(this.y + (float)Fonts.msBold[14].getFontHeight() + yOffset), (double)enabledWidth, (double)enabledHeight)) {
-            this.setting.set(mode);
+         for(Iterator var8 = Lists.reverse(this.setting.getModes().stream().sorted(Comparator.comparingDouble(this::getEnabledWidth)).toList()).iterator(); var8.hasNext(); offset += 9) {
+            String mode = (String)var8.next();
+            if (RenderUtility.isHovered(mouseX, mouseY, (double)(this.x + this.width - 18.0F - (float)(this.extended ? maxLength : Fonts.msBold[14].getWidth(this.setting.get()) + 4)), (double)(this.y + 12.0F + (float)offset), (double)(Fonts.msBold[14].getWidth(mode) + 4), 9.0)) {
+               this.setting.set(mode);
+               return;
+            }
          }
       }
 
    }
 
-   private float getEnabledWidth(String mode) {
-      return (float)(Fonts.msBold[14].getWidth(mode) + 4);
+   private int getEnabledWidth(String mode) {
+      return (int) (Fonts.msBold[14].getWidth(mode) + 4);
    }
 
    public boolean isVisible() {
